# sdp8xx-anemometer

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config
.github/workflows/: rust.yml
src/: main-bb.rs  main.rs
