[package]
name = "sdp8xx-anemometer"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = ""
readme = "README.md"
license = "MIT License"
repository = ""
edition = "2018"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
panic-halt = "0.2.0"
embedded-hal = "0.2.4"
stm32f0xx-hal = { version = "0.17.1", features = ["rt", "stm32f042"] }
bitbang-hal = { git = "https://github.com/sajattack/bitbang-hal", branch = "master" }
nb = "1.0.0"

[dependencies.sdp8xx]
git = "https://github.com/barafael/sdp8xx.git"
branch = "main"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = "thin"
codegen-units = 1
